# SindriKit

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
config/: README.md  hashes.ini
docs/: README.md
docs/architecture/: README.md  dependency_injection.md  redteam_integration.md  state_machines.md  status_system.md
docs/common/: README.md  api_reference.md  infrastructure.md
docs/config/: README.md  hashes_manifest.md
docs/domains/: README.md
docs/domains/evasion/: README.md  api_reference.md  techniques.md
docs/domains/injection/: README.md  api_reference.md  techniques.md
docs/domains/loaders/: README.md  api_reference.md  techniques.md
docs/domains/primitives/: README.md
docs/domains/primitives/execution/: README.md  api_reference.md  ffi.md  heavens_gate.md
docs/domains/primitives/mapping/: README.md  api_reference.md  techniques.md
docs/domains/primitives/memory/: README.md  api_reference.md  techniques.md
docs/domains/primitives/modules/: README.md  api_reference.md  peb_walking.md  techniques.md
docs/domains/primitives/process/: README.md  api_reference.md  techniques.md
docs/domains/primitives/syscalls/: README.md  api_reference.md  engines.md  gates.md  pipeline.md
docs/examples/: README.md  heavens_gate.md  inject_pe.md  inject_shell.md  loader_noCRT_nowinapi.md  loader_nowinapi.md  loader_winapi.md
docs/getting_started/: README.md  basic_usage.md  building.md
docs/parsers/: README.md  api_reference.md  techniques.md
docs/parsers/coff/: README.md  api_reference.md  techniques.md
docs/parsers/env/: README.md  api_reference.md  techniques.md
docs/parsers/pe/: README.md  api_reference.md  techniques.md
docs/scripts/: README.md  generate_hashes.md  mutator.md
docs/tests/: README.md  pe_mutator.md  test_payloads.md  test_runner.md
include/: sindri.h
include/sindri/: common.h  injection.h  loaders.h  parsers.h  primitives.h
include/sindri/common/: buffer.h  debug.h  disk.h  hash.h  helpers.h  macros.h  memory.h  status.h  string.h
include/sindri/injection/: classic.h  context.h
include/sindri/injection/classic/: chain.h  engine.h
include/sindri/internal/: nt.h  nt_defs.h
include/sindri/internal/nt/: api.h  peb.h  types.h
include/sindri/loaders/: coff.h  pe.h  reflective.h
include/sindri/loaders/coff/: chain.h  engine.h
include/sindri/loaders/knowndlls/: knowndlls.h
include/sindri/loaders/pe/: chain.h  engine.h
include/sindri/loaders/reflective/: chain.h  engine.h
include/sindri/parsers/: coff.h  env.h  pe.h
include/sindri/parsers/coff/: parser.h  relocations.h  symbols.h  utils.h
include/sindri/parsers/env/: peb.h
include/sindri/parsers/pe/: exports.h  imports.h  parser.h  pe_exports.h  pe_imports.h  pe_parser.h  pe_relocations.h  pe_utils.h  relocations.h  section_utils.h  utils.h
include/sindri/primitives/: ffi.h  heavens_gate.h  mapping.h  memory.h  modules.h  ntdll.h  object_manager.h  os_api.h  peb.h  process.h  syscalls.h
pocs/: CMakeLists.txt
pocs/heavens_gate/: CMakeLists.txt  main.c
pocs/inject_coff/: CMakeLists.txt  main.c
pocs/inject_pe/: CMakeLists.txt  main.c
pocs/inject_shell/: CMakeLists.txt  main.c
pocs/loader_coff/: CMakeLists.txt  main.c
pocs/loader_noCRT_nowinapi/: CMakeLists.txt  main.c
pocs/loader_nowinapi/: CMakeLists.txt  main.c
pocs/loader_winapi/: CMakeLists.txt  main.c
scripts/: README.md  generate_hashes.py
scripts/mutator/: morph.py
scripts/mutator/passes/: junk_c.py  masm_mutate.py  struct_shuffle.py
src/common/: buffer.c  crt_manifest.c  debug.c  disk.c  hash.c  helpers.c  status.c
src/injection/: context.c
src/injection/classic/: chain.c  engine.c
src/loaders/coff/: chain.c  engine.c
src/loaders/knowndlls/: knowndlls.c  native.c  win.c
src/loaders/pe/: chain.c  engine.c
src/loaders/reflective/: chain.c  engine.c
src/parsers/coff/: parser.c  relocations.c  symbols.c  utils.c
src/parsers/env/: peb.c
src/parsers/pe/: exports.c  imports.c  parser.c  pe_exports.c  pe_imports.c  pe_parser.c  pe_relocations.c  pe_section_utils.c  pe_section_utils.h  pe_utils.c  relocations.c  section_utils.c  utils.c
src/primitives/execution/ffi/: ffi_invoke.c  ffi_x64.asm  ffi_x86.asm
src/primitives/execution/ffi/asm/: ffi_x64.asm  ffi_x86.asm
src/primitives/execution/heavens_gate/: heavens_gate.c  heavens_gate_x86.asm
src/primitives/execution/heavens_gate/asm/: heavens_gate_x86.asm
src/primitives/execution/syscalls/: gadget_scan.c  spoof_scan.c  syscalls.c  syscalls_scan.c  syscalls_sort.c
src/primitives/execution/syscalls/asm/: invoke_direct_x64.asm  invoke_direct_x86.asm  invoke_indirect_x64.asm  invoke_indirect_x86.asm  invoke_spoofed_x64.asm  invoke_spoofed_x86.asm  invoke_x64.asm  invoke_x86.asm
src/primitives/mapping/: nt.c  sys.c  win.c
src/primitives/memory/: native.c  nt.c  sys.c  win.c
src/primitives/modules/: native.c  nt.c  ntdll.c  peb.c  win.c
src/primitives/object_manager/: knowndlls.c
src/primitives/process/: nt.c  sys.c  win.c
src/primitives/syscalls/: halosgate.c  hellsgate.c  syscalls.c  tartarusgate.c  velesreek.c
src/primitives/syscalls/asm/: invoke_x64.asm  invoke_x86.asm
src/primitives/syscalls/internal/: neighbor.c  neighbor.h
tests/: CMakeLists.txt  README.md
tests/loader/: CMakeLists.txt  README.md  pe_mutator.py  test_runner.py
tests/loader/src/: test_dll_advanced.c  test_dll_tls.c
tests/loaders/coff/: CMakeLists.txt  test_runner.py
tests/loaders/coff/src/: test_coff_args.c  test_coff_basic.c  test_coff_msgbox.c  test_coff_reloc.c
tests/loaders/pe/: README.md  pe_mutator.py  test_runner.py
tests/loaders/pe/src/: test_dll.c  test_dll_empty.c  test_dll_tls.c  test_exe.c  test_exe_advanced.c
